--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
 		</p>
 		<p class="lead text-muted">
 			This material is intended to supliment the course material provided on 
-			<a href="https://webcms3.cse.unsw.edu.au/COMP1511/19T2/">WebCMS</a>.
+			<a href="https://webcms3.cse.unsw.edu.au/COMP1511/19T3/">WebCMS</a>.
             <!--If you have questions, you can ask in class, ask on the 
 			<a href="https://webcms3.cse.unsw.edu.au/COMP1511/18s2/forums/">class forums</a>, 
 			<a href="mailto:h.kertesz@unsw.edu.au">email me</a> or go to one of the 
@@ -56,11 +56,13 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
             <p class="card-text">
             <a href="wk01"
                class="btn btn-lg btn-outline-secondary btn-block"
-               style="font-size: 37px"> wk01 
+               style="font-size: 37px"> wk01
             </a></p>
             <p class="card-text">
             Hello world! and <code>printf()</code>
 			</p></div></div></div>
+
+
 
             <!-- WEEK 02 -->
             <div class="col-md-4">
@@ -72,10 +74,13 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
                style="font-size: 37px"> wk02 
             </a></p>
             <p class="card-text">
+			<code>Coming soon...</code><br>
             Variables, simple I/O with <code>printf</code> and
             <code>scanf</code>, arithmetic expressions, <code>if</code>
             statements.
 			</p></div></div></div>
+
+
 
 
             <!-- WEEK 03 -->
@@ -88,9 +93,12 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
                style="font-size: 37px"> wk03 
             </a></p>
             <p class="card-text">
+			<code>Coming soon...</code><br>
             Nested <code>if</code> statements, boolean expressions. 
             Loops, nested loops.
 			</p></div></div></div>
+
+
 
             <!-- WEEK 04 -->
             <div class="col-md-4">
@@ -102,9 +110,12 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
                style="font-size: 37px"> wk04 
             </a></p>
             <p class="card-text">
+			<code>Coming soon...</code><br>
             Arrays, nested <code>while()</code> loops and using
             <code>scanf()</code>'s return value.
 			</p></div></div></div>
+
+
 
             <!-- WEEK 05 -->
             <div class="col-md-4">
@@ -116,8 +127,11 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
                style="font-size: 37px"> wk05 
             </a></p>
             <p class="card-text">
+			<code>Coming soon...</code><br>
             Functions and variable scope. 
 			</p></div></div></div>
+
+
 
             <!-- WEEK 06 -->
             <div class="col-md-4">
@@ -129,9 +143,12 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
                style="font-size: 37px"> wk06 
             </a></p>
             <p class="card-text">
+			<code>Coming soon...</code><br>
             ASCII, <code>getchar()</code>, <code>putchar()</code>
             and command line arguments.
 			</p></div></div></div>
+
+
 
             <!-- WEEK 07 -->
             <div class="col-md-4">
@@ -147,6 +164,8 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
             Structs and pointers.
 			</p></div></div></div>
 
+
+
             <!-- WEEK 08 -->
             <div class="col-md-4">
             <div class="card mb-4 box-shadow" style="height: 100%">
@@ -157,8 +176,11 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
                style="font-size: 37px"> wk08 
             </a></p>
             <p class="card-text">
+			<code>Coming soon...</code><br>
             Linked lists.
 			</p></div></div></div>
+
+
 
             <!-- WEEK 09 -->
             <div class="col-md-4">
@@ -173,6 +195,8 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
 			<code>Coming soon...</code><br>
 			</p></div></div></div>
 
+
+
             <!-- WEEK 10 -->
             <div class="col-md-4">
             <div class="card mb-4 box-shadow" style="height: 100%">
@@ -185,6 +209,10 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
             <p class="card-text">
 			<code>Coming soon...</code><br>
 			</p></div></div></div>
+
+
+
+
       		</div>
       		</div>
       	</div>
